# ros_deu

./: .gitignore  README.md  detector_bar.py
deu_car/: README.txt  gazebo_env.sh  package.xml
deu_car/launch/: car_test.launch  kobuki.launch.xml
deu_car/scripts/: bar_detector.py  blocking_bar_control.sh  drive.py  keys.py  line_detector.py  obstacle_spawn.py
deu_car/world/: car_test_map.world
deu_car/world/models/blocking_bar/: model.sdf  model.sdf.org
deu_car/world/models/blocking_bar/materials/: blocking.material
deu_car/world/models/ground/: model.sdf
deu_car/world/models/my_box/: model.config  model.sdf
deu_car/world/models/stand_traffic_light/: model.sdf
deu_car/world/models/stop_sign_resize/: model.sdf
deu_car/world/models/stop_sign_resize/meshes/: stop_sign.dae  stop_sign_org.dae
deu_ros/: CMakeLists.txt  package.xml
deu_ros/action/: Timer.action
deu_ros/launch/: course.launch  course.world
deu_ros/scripts/: fancy_action_client.py  fancy_action_server.py  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py  topic_publisher.py  topic_subscriber.py
deu_ros/scripts/ch13/: patrol_fsm.py  shapes2.py
deu_ros/scripts/ch13/smach_examples/: foo_bar.py
deu_ros/scripts/teleop_bot/: key_publisher.py  keys_to_twist.py
